techniska-ui/files/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: techniska-ui-service
  namespace: techniska-ui
spec:
  type: ClusterIP
  selector:
    app: techniska-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
